src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

/* Temporary Style */
body {
  margin-bottom: 200px;
  overflow-x: hidden;
}

h1 {
  text-shadow: -1px 0 #999, 0 1px #999, 1px 0 #999, 0 -1px #999;
}

#navbar {
  mask: linear-gradient(black, black, transparent);
}

